Ejercicio html, css, js terminado

--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
+  <link rel="stylesheet" href="style.css">
   
 </head>
 
 <body>
 
+    <h1 id="rojo">¡Hola mundo!</h1>
+
+    <img src="Pictures/I - Iguana.jpg" alt="Imagen de una iguana">
+
+    <h1 class="azul">Hola mundo</h1>
+    <h1 class="azul">Hola mundo</h1>
+    <h1 id="naranjo">Hola mundo</h1>
+    <h1>Hola mundo</h1>
   
   
   <!--
@@ -17,6 +26,8 @@
   page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
   teal, blue, blurple, magenta, pink!
   -->
+
+  <script src="script.js"></script>
   <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
 </body>
 
